[gd_scene load_steps=4 format=3 uid="uid://c8f4ulgbx3sa5"]

[ext_resource type="PackedScene" uid="uid://bss6a2gywpg57" path="res://prototypeArchive/Main_Character/sasha.tscn" id="1_i7k36"]
[ext_resource type="Script" uid="uid://dasvdsml8enom" path="res://prototypeArchive/Main_Character/MainPlayer.gd" id="1_wp0fa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wp0fa"]

[node name="MainPlayer" type="CharacterBody3D"]
script = ExtResource("1_wp0fa")

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wp0fa")

[node name="Sasha" parent="." instance=ExtResource("1_i7k36")]

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="CameraSpring" type="SpringArm3D" parent="Head"]
spring_length = 5.0

[node name="PlayerCamera" type="Camera3D" parent="Head/CameraSpring"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.91732)

[node name="ClimbingCast" type="Node3D" parent="."]

[node name="OnWall" type="RayCast3D" parent="ClimbingCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.380668, 0)
target_position = Vector3(0, 0, -1.5)

[node name="WallCheck" type="RayCast3D" parent="ClimbingCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.95915, 0)
target_position = Vector3(0, 0, -1.5)

[node name="StickPointHolder" type="Marker3D" parent="ClimbingCast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.838066, -0.503073)

[node name="StickPoint" type="Marker3D" parent="ClimbingCast/StickPointHolder"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.503742)

[editable path="Sasha"]
